Added secure authenticatioin calling REST API method

--- a/JOBS/kafka_mysql/__ST_pipeline_00_src_to_console_NotWork.conf
+++ b/JOBS/kafka_mysql/__ST_pipeline_00_src_to_console_NotWork.conf
@@ -36,7 +36,7 @@ transform {
 
 sink {
   Console {
-    plugin_input = "src_table"
+    plugin_input = ["src_table"]
     limit = 10,
     serializer = "json"
     log.print.data = true
