--- a/JOBS/kafka_mysql/mysql_inventory_cp_json_DebeziumSrc02_my_orders__DWH.conf
+++ b/JOBS/kafka_mysql/mysql_inventory_cp_json_DebeziumSrc02_my_orders__DWH.conf
@@ -45,7 +45,7 @@ source {
 sink {
 
     jdbc {
-        plugin_input = "source1"
+        plugin_input = ["source1"]
         url = "jdbc:mysql://db01.kaskade.local:3306/DWH_Seatunnel?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true"
         driver = "com.mysql.cj.jdbc.Driver"
         user = "seatunnel_sink"
