--- a/JOBS/kafka_mysql/mysql_inventory_cp_json_DebeziumSrc02_my_orders__console.conf
+++ b/JOBS/kafka_mysql/mysql_inventory_cp_json_DebeziumSrc02_my_orders__console.conf
@@ -73,7 +73,7 @@ source {
 
 sink {
   Console {
-    plugin_input = "fake1"
+    plugin_input = ["fake1"]
 
     log.print.data = true
     log.print.delay.ms = 1000
