--- a/JOBS/kafka_starrocks/__archived/mssql_INV_cp_avro_DebeziumSrc02_INV_orders_demo00__ODS.yaml
+++ b/JOBS/kafka_starrocks/__archived/mssql_INV_cp_avro_DebeziumSrc02_INV_orders_demo00__ODS.yaml
@@ -68,7 +68,7 @@ sink {
       format = "JSON"
       strip_outer_array = true
     }
-    plugin_input = "fake1"
+    plugin_input = ["fake1"]
     plugin_output = "fake2"
   }
 }
