--- a/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__1t_1t_src.conf
+++ b/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__1t_1t_src.conf
@@ -46,7 +46,7 @@ source {
 sink {
 
   kafka {
-      plugin_input = "emps_transform"
+      plugin_input = ["emps_transform"]
       topic = "sqlserver_cdc__1t_1t"
       bootstrap.servers = "172.199.0.3:29092"
       format = compatible_debezium_json
