--- a/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__1t_1t_src_sink.conf
+++ b/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__1t_1t_src_sink.conf
@@ -42,7 +42,7 @@ source {
 
 sink {
   Jdbc {
-    plugin_input = "emps_source"
+    plugin_input = ["emps_source"]
     driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
     url = "jdbc:sqlserver://db01.kaskade.local:1433;databaseName=dwh;encrypt=false"
     user = ${SINK_DB_USER}
