--- a/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_02.conf
+++ b/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_02.conf
@@ -47,7 +47,7 @@ source {
 sink {
 
   kafka {
-      plugin_input = "sqlserver_cdc__2t_2t_src_02"
+      plugin_input = ["sqlserver_cdc__2t_2t_src_02"]
       topic = "sqlserver_cdc__2t_2t_src_02${topic}"
       bootstrap.servers = "172.199.0.3:29092"
       format = compatible_debezium_json
