--- a/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_sink_01.conf
+++ b/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_sink_01.conf
@@ -69,7 +69,7 @@ source {
 sink {
 
   Jdbc {
-    plugin_input = "emps_source"
+    plugin_input = ["emps_source"]
     driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
     url = "jdbc:sqlserver://db01.kaskade.local:1433;databaseName=dwh;encrypt=false"
     user = ${SINK_DB_USER}
@@ -85,7 +85,7 @@ sink {
   }
 
   Jdbc {
-    plugin_input = "depts_source"
+    plugin_input = ["depts_source"]
     driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
     url = "jdbc:sqlserver://db01.kaskade.local:1433;databaseName=dwh;encrypt=false"
     user = ${SINK_DB_USER}
@@ -101,7 +101,7 @@ sink {
   }
 
   Console {
-    plugin_input = "emps_source"
+    plugin_input = ["emps_source"]
   }
 
 }
