--- a/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_sink_02.conf
+++ b/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_sink_02.conf
@@ -77,7 +77,7 @@ sink {
     generate_sink_sql = true
     database = "dwh"
     table = "${table_name}"
-    primary_keys = ["first_name","last_name","dept_id"]
+    primary_keys = ["id"]
     schema_save_mode = "CREATE_SCHEMA_WHEN_NOT_EXIST"
     enable_upsert = true
     max_retries = 3
