--- a/JOBS/sqlserver_sqlserver_TRANSFORM/sqlserver_cdc__concat.conf
+++ b/JOBS/sqlserver_sqlserver_TRANSFORM/sqlserver_cdc__concat.conf
@@ -36,10 +36,10 @@ transform {
     plugin_output = "emps_transform"
     query = """
       SELECT 
-        CONCAT(first_name, ' ', last_name) AS full_name,
-        id, 
-        dept_id, 
-        hired_at
+        id as employee_id, 
+        concat(first_name, ' ', last_name ) as full_name,
+        dept_id as department_id, 
+        hired_at as hire_date
       FROM emps WHERE dept_id = 1;
     """
 
