--- a/JOBS/sqlserver_sqlserver_TRANSFORM/sqlserver_cdc__multi_tables.conf
+++ b/JOBS/sqlserver_sqlserver_TRANSFORM/sqlserver_cdc__multi_tables.conf
@@ -12,9 +12,9 @@ env {
 source {
   SqlServer-CDC {
     plugin_output = "depts_source"
-    base-url = "jdbc:sqlserver://db01.kaskade.local:1433;databaseName=company;encrypt=false"
-    username = ${SRC_DB_USER}
-    password = ${SRC_DB_PASSWORD}
+    base-url = "jdbc:sqlserver://db02.kaskade.local:1433;databaseName=company;encrypt=false"
+    username = seatunnel_src
+    password = Abcd1234
 
     database-names = ["company"]
     table-names = ["company.dbo.depts"]
@@ -29,9 +29,9 @@ source {
   }
   SqlServer-CDC {
     plugin_output = "emps_source"
-    base-url = "jdbc:sqlserver://db01.kaskade.local:1433;databaseName=company;encrypt=false"
-    username = ${SRC_DB_USER}
-    password = ${SRC_DB_PASSWORD}
+    base-url = "jdbc:sqlserver://db02.kaskade.local:1433;databaseName=company;encrypt=false"
+    username = seatunnel_src
+    password = Abcd1234
 
     database-names = ["company"]
     table-names = ["company.dbo.emps"]
@@ -47,21 +47,21 @@ source {
 }
 
 transform {
-  FilterRowKind {
-    plugin_input = "emps_source"
-    plugin_output = "emps_transform"
-    exclude_kinds = ["DELETE"]
-  }
+#  FilterRowKind {
+#    plugin_input = ["emps_source"]
+#    plugin_output = "emps_transform"
+#    exclude_kinds = ["DELETE"]
+#  }
 }
 
 
 sink {
   Jdbc {
-    plugin_input = "depts_source"
+    plugin_input = ["depts_source"]
     driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url = "jdbc:sqlserver://db01.kaskade.local:1433;databaseName=dwh;encrypt=false"
-    user = ${SINK_DB_USER}
-    password = ${SINK_DB_PASSWORD}
+    url = "jdbc:sqlserver://db02.kaskade.local:1433;databaseName=dwh;encrypt=false"
+    user = seatunnel_sink
+    password = Abcd1234
     generate_sink_sql = true
     database = "dwh"
     table = "DW_ETL.depts"
@@ -71,11 +71,11 @@ sink {
   }
 
   Jdbc {
-    plugin_input = "emps_transform"
+    plugin_input = ["emps_source"]
     driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url = "jdbc:sqlserver://db01.kaskade.local:1433;databaseName=dwh;encrypt=false"
-    user = ${SINK_DB_USER}
-    password = ${SINK_DB_PASSWORD}
+    url = "jdbc:sqlserver://db02.kaskade.local:1433;databaseName=dwh;encrypt=false"
+    user = seatunnel_sink
+    password = Abcd1234
     generate_sink_sql = true
     database = "dwh"
     table = "DW_ETL.emps"
