--- a/Makefile.env
+++ b/Makefile.env
@@ -1,2 +1,14 @@
+
 DEFAULT_MASTER=master1
-SEATUNNEL_VER=2.3.10
+SEATUNNEL_VER=2.3.11
+
+# baseUrl=http://localhost:8080
+baseUrl=https://localhost:8443
+CURL_USER=--user "admin:admin"
+#TLS_ONE_WAY=-k
+CA_CERT=--cacert key_store/root-ca.crt
+
+SRC_DB_USER=seatunnel_src
+SRC_DB_PASSWORD=Abcd1234
+SINK_DB_USER=seatunnel_sink
+SINK_DB_PASSWORD=Abcd1234
