--- a/JOBS/kafka_mysql/temp.yaml
+++ b/JOBS/kafka_mysql/temp.yaml
@@ -159,7 +159,7 @@ source {
 
 sink {
   Console {
-    plugin_input = "fake1"
+    plugin_input = ["fake1"]
 
     log.print.data = true
     log.print.delay.ms = 1000
