--- a/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__1t_1t_src_console.conf
+++ b/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__1t_1t_src_console.conf
@@ -42,11 +42,11 @@ source {
 
 sink {
   Console {
-    plugin_input = "emps_source"
+    plugin_input = ["emps_source"]
   }
 }
 #  kafka {
-#      plugin_input = "emps_transform"
+#      plugin_input = ["emps_transform"]
 #      topic = "sqlserver_cdc__1t_1t"
 #      bootstrap.servers = "172.199.0.3:29092"
 #      format = compatible_debezium_json
