--- a/config/hazelcast.yaml
+++ b/config/hazelcast.yaml
@@ -16,10 +16,10 @@
 #
 
 hazelcast:
-  cluster-name: seatunnel-test-lab
+  cluster-name: seatunnel
   network:
     rest-api:
-      enabled: true
+      enabled: false
       endpoint-groups:
         CLUSTER_WRITE:
           enabled: true
@@ -29,10 +29,9 @@ hazelcast:
       tcp-ip:
         enabled: true
         member-list:
-          - 172.19.0.50
+          - localhost
     port:
-      auto-increment: true
-      port-count: 100
+      auto-increment: false
       port: 5801
   properties:
     hazelcast.invocation.max.retry.count: 20
