--- a/docker-compose.1m2w.yaml
+++ b/docker-compose.1m2w.yaml
@@ -8,31 +8,21 @@ services:
     #  dockerfile: ./Dockerfile-seatunnel-kas
     hostname: seatunnel-master1
     container_name: seatunnel-master1
-    environment:
-      - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.50,172.199.0.51,172.199.0.52
-      - SRC_DB_USER=seatunnel_src
-      - SRC_DB_PASSWORD=Abcd1234
-      - SINK_DB_USER=seatunnel_sink
-      - SINK_DB_PASSWORD=Abcd1234
-      # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
-        #- IJAVA_CLASSPATH=/opt/seatunnel/lib
-      #- JAVA_CLASSPATH=/opt/seatunnel/lib
+    env_file:
+      - ./docker-compose.env
     entrypoint: >
       /bin/sh -c "
       /opt/seatunnel/bin/seatunnel-cluster.sh -r master
       "    
     ports:
       - "5801:5801"
-      - "5701:5701"
+      - "8080:8080"
     volumes:
-      - ./config:/opt/seatunnel/config
-        #- ../st_src/lib:/opt/seatunnel/lib
-        #- ../st_src/shared-connectors:/shared-connectors
       - ./JOBS:/opt/seatunnel/JOBS
       - ./Makefile.ct:/opt/seatunnel/Makefile
-      - seatunnel_master1_data:/opt/seatunnel/data
-      - seatunnel_logs:/opt/seatunnel/logs
+      - ./config:/opt/seatunnel/config/config
+      #- ./connectors:/opt/seatunnel/connectors
+      - ./key_store:/key_store
     networks:
       integration:
         ipv4_address: 172.199.0.50
@@ -41,23 +31,18 @@ services:
     image: quay.io/larryloi/seatunnel-2.3.10-kas:latest
     hostname: seatunnel-worker-1
     container_name: seatunnel-worker-1
-    environment:
-      - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.50,172.199.0.51,172.199.0.52
-
-      # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
-        #- IJAVA_CLASSPATH=/opt/seatunnel/lib
-      # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
+    env_file:
+      - ./docker-compose.env
     entrypoint: >
       /bin/sh -c "
       /opt/seatunnel/bin/seatunnel-cluster.sh -r worker
       " 
     volumes:
-      - ./config:/opt/seatunnel/config
       - ./JOBS:/opt/seatunnel/JOBS
       - ./Makefile.ct:/opt/seatunnel/Makefile
-      - seatunnel_worker1_data:/opt/seatunnel/data
-      - seatunnel_logs:/opt/seatunnel/logs
+      - ./config:/opt/seatunnel/config/config
+      # - ./connectors:/opt/seatunnel/connectors
+      - ./key_store:/key_store
     depends_on:
       - master1
     networks:
@@ -68,69 +53,24 @@ services:
     image: quay.io/larryloi/seatunnel-2.3.10-kas:latest
     hostname: seatunnel-worker-2
     container_name: seatunnel-worker-2
-    environment:
-      - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.50,172.199.0.51,172.199.0.52
-      # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
-        #- IJAVA_CLASSPATH=/opt/seatunnel/lib
-        #- JAVA_CLASSPATH=/opt/seatunnel/lib
+    env_file:
+      - ./docker-compose.env
     entrypoint: >
       /bin/sh -c "
       /opt/seatunnel/bin/seatunnel-cluster.sh -r worker 
       " 
     volumes:
-      - ./config:/opt/seatunnel/config
       - ./JOBS:/opt/seatunnel/JOBS
       - ./Makefile.ct:/opt/seatunnel/Makefile
-      - seatunnel_worker2_data:/opt/seatunnel/data
-      - seatunnel_logs:/opt/seatunnel/logs
+      - ./config:/opt/seatunnel/config/config
+      # - ./connectors:/opt/seatunnel/connectors
+      - ./key_store:/key_store
     depends_on:
       - master1
     networks:
       integration:
         ipv4_address: 172.199.0.52
 
-  mysql:
-    image: seatunnel-mysql:0.1.0
-    hostname: seatunnel-mysql
-    container_name: seatunnel-mysql
-    environment:
-      TZ: Asia/Shanghai
-      MYSQL_ROOT_PASSWORD: Abcd1234
-      MYSQL_DATABASE: seatunnel
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-    networks:
-      integration:
-        ipv4_address: 172.199.0.60
-
-  web:
-    image: seatunnel-web:0.1.0
-    hostname: seatunnel-web
-    container_name: seatunnel-web
-    environment:
-      - SEATUNNEL_MASTER_HOST=172.199.0.50
-      - MYSQL_HOST=172.199.0.60
-      - MYSQL_PORT=3306
-      - MYSQL_DB=seatunnel
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=Abcd1234
-      - SEATUNNEL_HOME=/opt/app/seatunnel-web
-    ports:
-      - "8080:8080"
-      - "8801:8801"
-    networks:
-      integration:
-        ipv4_address: 172.199.0.61
-    depends_on:
-      - master1
-      - mysql
-    volumes:
-      - ./shared-connectors:/shared-connectors
-      - ./seatunnel-web/application.yml:/opt/app/seatunnel-web/conf/application.yml
-      - ./seatunnel-web/hazelcast-client.yaml:/opt/app/seatunnel-web/conf/hazelcast-client.yaml
 
 
 networks:
@@ -139,7 +79,6 @@ networks:
 
 volumes:
   mysql_data:
-  shared-connectors:
   seatunnel_master1_data:
   seatunnel_worker1_data:
   seatunnel_worker2_data:
