added mongodb source job

--- a/job/sqlserver2paimon.cdc.stream.conf
+++ b/job/sqlserver2paimon.cdc.stream.conf
@@ -28,7 +28,7 @@ sink {
     paimon.hadoop.conf = {
         fs.s3a.access-key=seatunnel_sink
         fs.s3a.secret-key=Abcd1234
-        fs.s3a.endpoint="http://dev02:9000"
+        fs.s3a.endpoint="http://db01:9000"
         fs.s3a.path.style.access=true
         fs.s3a.aws.credentials.provider=org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider
     }
