--- a/job/sqlserver2paimon.cdc.stream.metadata.multi.table.conf
+++ b/job/sqlserver2paimon.cdc.stream.metadata.multi.table.conf
@@ -23,27 +23,36 @@ source {
 transform {
   Metadata {
     plugin_input = ["source_result1"]
+    plugin_output = "meta_result"
     metadata_fields {
       Database = database
       Table = table
       RowKind = op
-      EventTime = updated_at
+      EventTime = ts_ms
       Delay = delay
     }
-    plugin_output = "tran_result1"
+  }
+  Sql {
+    plugin_input = ["meta_result"]
+    plugin_output = "tran_result"
+    query = """
+      SELECT *,
+        TO_DATE (FROM_UNIXTIME(ts_ms/1000, 'yyyy-MM-dd HH:mm:ss'), 'yyyy-MM-dd HH:mm:ss' ) ingested_at
+      FROM source_result1
+    """
   }
 }
 
 sink {
   Paimon {
-    plugin_input = ["tran_result1"]
+    plugin_input = ["tran_result"]
     warehouse = "s3a://lakehouse/paimon_ods/"
-    database="${database_name}_dwh"
+    database="ods_${database_name}"
     table="${table_name}"
     paimon.hadoop.conf = {
         fs.s3a.access-key=seatunnel_sink
         fs.s3a.secret-key=Abcd1234
-        fs.s3a.endpoint="http://dev02:9000"
+        fs.s3a.endpoint="http://db01:9000"
         fs.s3a.path.style.access=true
         fs.s3a.aws.credentials.provider=org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider
     }
