--- a/job/sqlserver2sqlserver.cdc.stream.change.event.conf
+++ b/job/sqlserver2sqlserver.cdc.stream.change.event.conf
@@ -8,10 +8,14 @@
 # The table name and primary key are passed to sink connector by variable substitution.
 
 env {
-    job.name = "sqlserver2sqlserver.cdc.stream.metadata.multi.tables"
+    job.name = "sqlserver2sqlserver.cdc.stream.change.event"
     parallelism = 1
     job.mode = "STREAMING"
-    checkpoint.interval = 10000
+    checkpoint.interval = 5000
+    job.retry.times = 3
+    job.retry.interval.seconds = 10
+    read_limit.bytes_per_second=7000000
+    read_limit.rows_per_second=400
 }
 
 source {
@@ -25,49 +29,55 @@ source {
     username = "seatunnel_src"
     password = "Abcd1234"
     database-names = ["company"]
-    table-names = ["company.dbo.emps","company.dbo.depts"]
+    table-names = ["company.dbo.depts"]
+    
   }
 }
 
 transform {
-  Metadata {
-    plugin_input = ["source_result1"]
-    plugin_output = "meta_result"
-    metadata_fields {
-      Database = database
-      Table = table
-      RowKind = op
-      EventTime = ts_ms
-      Delay = delay
+  FieldMapper {
+    plugin_input  = ["source_result1"]
+    plugin_output = "mapped_result"
+    field_mapper = {
+      "before.id"   = "before_id"
+      "before.name" = "before_name"
+      "after.id"    = "after_id"
+      "after.name"  = "after_name"
     }
   }
-  Sql {
-    plugin_input = ["meta_result"]
-    plugin_output = "tran_result"
-    query = """
-      SELECT *,
-        TO_DATE (FROM_UNIXTIME(ts_ms/1000, 'yyyy-MM-dd HH:mm:ss'), 'yyyy-MM-dd HH:mm:ss' ) ingested_at
-      FROM source_result1
-    """
+
+  Metadata {
+    plugin_input = ["mapped_result"]
+    metadata_fields {
+      Database = database
+      Table    = table
+    }
+    plugin_output = "tran_result1"
   }
 }
 
 sink {
-  Jdbc {
-    plugin_input = ["tran_result"]
-    driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url = "jdbc:sqlserver://db02:1433;databaseName=company_dwh"
-    user = seatunnel_sink
-    password = "Abcd1234"
 
-    generate_sink_sql = true
-    batch_size = 100
-    schema_save_mode = "CREATE_SCHEMA_WHEN_NOT_EXIST"
-    data_save_mode = "APPEND_DATA"
-
-    database = "company_dwh"
-    table = "DW_ETL.${table_name}"
-    primary_keys = ["${primary_key}"]
-    enable_upsert = true
+  console {
+    plugin_input = "tran_result1"
   }
+
+#  Jdbc {
+#    plugin_input = ["tran_result1"]
+#    driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
+#    url = "jdbc:sqlserver://db02:1433;databaseName=company_dwh"
+#    user = seatunnel_sink
+#    password = "Abcd1234"
+#
+#    generate_sink_sql = true
+#    batch_size = 100
+#    schema_save_mode = "CREATE_SCHEMA_WHEN_NOT_EXIST"
+#    data_save_mode = "APPEND_DATA"
+#    enable_upsert = false
+#
+#    database = "company_dwh"
+#    table = "DW_ETL.changelog_${table_name}"
+#    
+#  }
 }
+
