--- a/job/sqlserver2sqlserver.cdc.stream.metadata.conf
+++ b/job/sqlserver2sqlserver.cdc.stream.metadata.conf
@@ -53,7 +53,7 @@ transform {
       database,
       table,
       op,
-      FROM_UNIXTIME(ts_ms/1000, 'yyyy-MM-dd HH:mm:ss') updated_at,
+      TO_DATE (FROM_UNIXTIME(ts_ms/1000, 'yyyy-MM-dd HH:mm:ss'), 'yyyy-MM-dd HH:mm:ss' ) ingested_at
       delay
     FROM tran_result1
     """
