--- a/docker-compose.env
+++ b/docker-compose.env
@@ -8,3 +8,5 @@ SRC_DB_USER=seatunnel_src
 SRC_DB_PASSWORD=Abcd1234
 SINK_DB_USER=seatunnel_sink
 SINK_DB_PASSWORD=Abcd1234
+
+JAVA_OPTS="-javaagent:/opt/jmx_exporter/jmx_prometheus_javaagent.jar=7072:/opt/jmx_exporter/config.yaml"
