--- a/job/mongo2sqlserver_cdc_stream.conf
+++ b/job/mongo2sqlserver_cdc_stream.conf
@@ -21,14 +21,21 @@ source {
     collection = ["company.users"]
     username = stuser
     password = stpw
-    schema = {
-      table = "company.users"
-      fields {
-        _id = string
-        name = string
-        age = int
+    tables_configs = [
+      {
+        schema = {
+          table = "company.users"
+          fields {
+            _id = string
+            name = string
+            age = int
+          }
+        }
       }
-    }
+    ]
+    batch.size = 1000
+    poll.max.batch.size	= 1000
+    poll.await.time.ms = 500
   }
 }
 
@@ -67,7 +74,7 @@ sink {
     batch_size = 100
     schema_save_mode = "CREATE_SCHEMA_WHEN_NOT_EXIST"
     data_save_mode = "APPEND_DATA"
-    primary_keys = ["name"]
+    primary_keys = ["_id"]
     database = "company_dwh"
     table = "DW_ETL.mongo_company_users_cdc"
     enable_upsert = true
