[obj] update Makefile and MySQL 8.4 HA cluster test cases

--- a/Makefile.env
+++ b/Makefile.env
@@ -1,13 +1,15 @@
-
+# Common Config
 DEFAULT_MASTER=master1
-SEATUNNEL_VER=2.3.11
+SEATUNNEL_VER=2.3.12
+DOCKER_IMAGE="seatunnel-${SEATUNNEL_VER}-kas:latest"
 
 # baseUrl=http://localhost:8080
 baseUrl=https://localhost:8443
-CURL_USER=--user "admin:admin"
+CURL_SECRET=--user "admin:admin"
 #TLS_ONE_WAY=-k
 CA_CERT=--cacert key_store/root-ca.crt
 
+# Database Config
 SRC_DB_USER=seatunnel_src
 SRC_DB_PASSWORD=Abcd1234
 SINK_DB_USER=seatunnel_sink
