--- a/job/mysql2mysql_cdc_multi_table_sink_variables.conf
+++ b/job/mysql2mysql_cdc_multi_table_sink_variables.conf
@@ -32,24 +32,22 @@ env {
 
 source {
   MySQL-CDC {
-    plugin_output = "customers_mysql_cdc"
+    plugin_output = "source_result1"
     server-id = 5652-5660
-    base-url = "jdbc:mysql://10.2.2.209:3306/inventory"
-    username = ${SRC_DB_USER}
-    password = "${SRC_DB_PASSWORD}"
-    table-names = ["inventory.abc", "inventory.xyz"]
+    base-url = "jdbc:mysql://10.1.1.106:6446/inventory"
+    username = "seatunnel_src"
+    password = "Abcd1234"
+    table-names = ["inventory.orders", "inventory.suppliers"]
 
     snapshot.split.size = 1
     table-name-config = [
         {
-            table = "inventory.abc"
-            primaryKeys = []
-            snapshotSplitColumn = "f_int"
+            table = "inventory.orders"
+            primaryKeys = ["id"]
         },
         {
-            table = "inventory.xyz"
-            primaryKeys = []
-            snapshotSplitColumn = "f_int"
+            table = "inventory.suppliers"
+            primaryKeys = ["id"]
         }
     ]
     snapshot.fetch.size = 1
@@ -59,17 +57,37 @@ source {
 }
 
 transform {
+  Metadata {
+    plugin_input = ["source_result1"]
+    plugin_output = "meta_result"
+    metadata_fields {
+      Database = database
+      Table = table
+      RowKind = op
+      EventTime = ts_ms
+      Delay = delay
+    }
+  }
+  Sql {
+    plugin_input = ["meta_result"]
+    plugin_output = "tran_result"
+    query = """
+      SELECT *,
+        TO_DATE (FROM_UNIXTIME(ts_ms/1000, 'yyyy-MM-dd HH:mm:ss'), 'yyyy-MM-dd HH:mm:ss' ) ingested_at
+      FROM source_result1
+    """
+  }
 }
 
 sink {
   jdbc {
-    plugin_input = "customers_mysql_cdc"
+    plugin_input = ["tran_result"]
     driver = "com.mysql.cj.jdbc.Driver"
-    url = "jdbc:mysql://10.2.2.209:3306/dwh"
-    user = ${SINK_DB_USER}
-    password = ${SINK_DB_PASSWORD}
+    url = "jdbc:mysql://10.2.2.209:3306/dwh_seatunnel"
+    user = "seatunnel_sink"
+    password = "Abcd1234"
 
-    database = "dwh"
+    database = "dwh_seatunnel"
     table = "${table_name}"
     primary_keys = ["${primary_key}"]
     generate_sink_sql = true
