Update metadata transformation to RowKindExtractor for __op keep tracking

--- a/job/sqlserver2paimon.cdc.stream.metadata.multi.table.conf
+++ b/job/sqlserver2paimon.cdc.stream.metadata.multi.table.conf
@@ -1,6 +1,6 @@
 env {
   parallelism = 1
-  job.name = "sqlserver2paimon.cdc.stream.metadata.multi.table.conf"
+  job.name = "sqlserver2paimon.cdc.stream.metadata.multi.table"
   job.mode = "STREAMING"
   checkpoint.interval = 5000
 }
@@ -21,32 +21,37 @@ source {
 }
 
 transform {
-  Metadata {
+  RowKindExtractor {
     plugin_input = ["source_result1"]
-    plugin_output = "meta_result"
-    metadata_fields {
-      Database = database
-      Table = table
-      RowKind = op
-      EventTime = ts_ms
-      Delay = delay
+    plugin_output = "row_kind_result"
+    transform_type = "SHORT"
     }
-  }
+  
   Sql {
-    plugin_input = ["meta_result"]
-    plugin_output = "tran_result"
+    plugin_input = ["row_kind_result"]
+    plugin_output = "sql_result"
     query = """
-      SELECT *,
-        TO_DATE (FROM_UNIXTIME(ts_ms/1000, 'yyyy-MM-dd HH:mm:ss'), 'yyyy-MM-dd HH:mm:ss' ) ingested_at
-      FROM source_result1
+      SELECT *, NOW() ingested_at
+      FROM row_kind_result
     """
+  }
+
+  FieldRename {
+    plugin_input = "sql_result",
+    plugin_output = "tran_result"
+    replacements_with_regex = [
+      {
+        replace_from = "row_kind"
+        replace_to = "__op"
+      }
+    ] 
   }
 }
 
 sink {
   Paimon {
     plugin_input = ["tran_result"]
-    warehouse = "s3a://lakehouse/paimon_ods/"
+    warehouse = "s3a://datalake/ods/"
     database="ods_${database_name}"
     table="${table_name}"
     paimon.hadoop.conf = {
