--- a/job/sqlserver2paimon.cdc.stream.metadata.multi.table.test1.conf
+++ b/job/sqlserver2paimon.cdc.stream.metadata.multi.table.test1.conf
@@ -1,9 +1,8 @@
-
 env {
-    job.name = "sqlserver2sqlserver.cdc.stream.metadata"
-    parallelism = 1
-    job.mode = "STREAMING"
-    checkpoint.interval = 10000
+  parallelism = 1
+  job.name = "sqlserver2paimon.cdc.stream.metadata.multi.table.test1"
+  job.mode = "STREAMING"
+  checkpoint.interval = 5000
 }
 
 source {
@@ -17,14 +16,7 @@ source {
     username = "seatunnel_src"
     password = "Abcd1234"
     database-names = ["company"]
-    table-names = ["company.dbo.emps"]
-    table-names-config = [
-      {
-        table = "company.dbo.emps"
-        primaryKeys = ["id"]
-      }
-    ]
-
+    table-names = ["company.dbo.emps","company.dbo.depts"]
   }
 }
 
@@ -56,21 +48,22 @@ transform {
   }
 }
 
-}
-
 sink {
-  Jdbc {
-    plugin_input = ["tran_result2"]
-    driver = com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url = "jdbc:sqlserver://db02:1433;databaseName=company_dwh"
-    user = seatunnel_sink
-    password = "Abcd1234"
-    database = "company_dwh"
-    table = "DW_ETL.emps"
-    generate_sink_sql = true
-    primary_keys = ["id"]
-    schema_save_mode = "CREATE_SCHEMA_WHEN_NOT_EXIST"
-    data_save_mode = "APPEND_DATA"
+  Paimon {
+    plugin_input = ["tran_result"]
+    warehouse = "s3a://datalake1/"
+    database="ods_${database_name}"
+    table="${table_name}_test1"
+    paimon.hadoop.conf = {
+        fs.s3a.access-key=seatunnel_sink
+        fs.s3a.secret-key=Abcd1234
+        fs.s3a.endpoint="http://db01:9000"
+        fs.s3a.path.style.access=true
+        fs.s3a.aws.credentials.provider=org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider
+    }
+    paimon.table.write-props = {
+        bucket = 2
+        file.format = "parquet"
+    }
   }
-
 }
