--- a/job/sqlserver2sqlserver.cdc.stream.change.event.conf
+++ b/job/sqlserver2sqlserver.cdc.stream.change.event.conf
@@ -35,24 +35,30 @@ source {
 }
 
 transform {
-  FieldMapper {
-    plugin_input  = ["source_result1"]
-    plugin_output = "mapped_result"
-    field_mapper = {
-      "before.id"   = "before_id"
-      "before.name" = "before_name"
-      "after.id"    = "after_id"
-      "after.name"  = "after_name"
+  RowKindExtractor {
+    plugin_input = ["source_result1"]
+    plugin_output = "row_kind_result"
+    transform_type = "SHORT"
     }
+  
+  Sql {
+    plugin_input = ["row_kind_result"]
+    plugin_output = "sql_result"
+    query = """
+      SELECT *, NOW() ingested_at
+      FROM row_kind_result
+    """
   }
 
-  Metadata {
-    plugin_input = ["mapped_result"]
-    metadata_fields {
-      Database = database
-      Table    = table
-    }
-    plugin_output = "tran_result1"
+  FieldRename {
+    plugin_input = "sql_result",
+    plugin_output = "tran_result"
+    replacements_with_regex = [
+      {
+        replace_from = "row_kind"
+        replace_to = "__op"
+      }
+    ] 
   }
 }
 
