--- a/job/test1_mysql.conf
+++ b/job/test1_mysql.conf
@@ -20,8 +20,8 @@
 
 env {
   # You can set engine configuration here
-  job.name = "mysql2mysql_cdc_multi_table_sink_variables"
-  parallelism = 3
+  job.name = "mysql2mysql_cdc_multi_table_sink_test1"
+  parallelism = 1
   job.mode = "STREAMING"
   checkpoint.interval = 5000
   job.retry.times = 3
@@ -34,17 +34,21 @@ source {
   MySQL-CDC {
     plugin_output = "source_result1"
     server-id = 5652-5660
-    base-url = "jdbc:mysql://10.1.1.106:6446/inventory"
+    url = "jdbc:mysql://10.1.1.105:3306/inventory"
     username = "seatunnel_src"
     password = "Abcd1234"
-    table-names = ["inventory.orders", "inventory.suppliers"]
+    server-time-zone = "Asia/Shanghai"
+    schema-changes.enabled = true
 
+    startup.mode=latest
+    connect.timeout.ms = 30000
+    connect.max-retries = 3
+    connection.pool.size = 20
     snapshot.split.size = 1
+
+    table-names = ["inventory.suppliers"]
     table-name-config = [
-        {
-            table = "inventory.orders"
-            primaryKeys = ["id"]
-        },
+
         {
             table = "inventory.suppliers"
             primaryKeys = ["id"]
@@ -88,13 +92,19 @@ sink {
   jdbc {
     plugin_input = ["tran_result"]
     driver = "com.mysql.cj.jdbc.Driver"
-    url = "jdbc:mysql://10.2.2.209:3306/dwh_seatunnel"
-    user = "seatunnel_sink"
+    url = "jdbc:mysql://db02:3306/dwh_kafka?connectionTimeZone=Asia/Shanghai"
+    username = "seatunnel_sink"
     password = "Abcd1234"
 
-    database = "dwh_seatunnel"
-    table = "${table_name}"
-    primary_keys = ["${primary_key}"]
     generate_sink_sql = true
+    database = "dwh_kafka"
+    table = "${table_name}_kafka_sink"
+    primary_keys = ["${primary_key}"]
+
+    enable_upsert = true
+    schema_save_mode = "CREATE_SCHEMA_WHEN_NOT_EXIST"
+    data_save_mode = "APPEND_DATA"
+    
   }
+
 }
